2002-02-10  Gediminas Paulauskas <menesis@delfi.lt>

	* Makefile.am: use intltool for .desktop files.
	* gnome-panel-properties.desktop.in: add files without
	translations.
	* gnome-panel-properties.desktop: removed, they are generated.

2002-02-10  Gediminas Paulauskas <menesis@delfi.lt>

	* quick-desktop-reader.c: do charset conversion only if source
	encoding is not NULL. Avoids lots of warnings.

2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* session.c: (panel_session_save): another leak. That seems
	to be most of them ...

2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* panel-widget.c: (panel_widget_set_new_id),
	(panel_widget_new): kill more leaks.

2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* panel.c: (panel_gconf_profile_set_string),
	(panel_gconf_profile_set_int), (panel_gconf_profile_set_bool):
	fix more hideous leaks and re-name like below.
	(panel_session_save_panel): upd for above.

2002-02-07  Mark McLoughlin  <mark@skynet.ie>

	* menu-properties.c: (properties_apply_callback): save to gconf.

	* menu.c: (menu_save_to_gconf): check icon file is set before
	setting it in gconf.

2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* session.[ch]: (panel_session_save): don't dup string. it
	was been leaked allmost everywhere anyway.

	* applet.c: (panel_applet_clean_gconf), (panel_applet_load_list),
	(panel_applet_save_position), (panel_applet_save_to_gconf):
	* drawer.c: (drawer_save_to_gconf), (drawer_load_from_gconf):
	* launcher.c: (launcher_save_to_gconf):
	* menu.c: (menu_save_to_gconf), (menu_load_from_gconf):
	* panel-applet-frame.c: (panel_applet_frame_save_to_gconf):
	* panel.c: (panel_session_save_panel):
	* swallow.c: (swallow_save_to_gconf), (swallow_load_from_gconf):
	update for above change.

	* distribution.c: (get_distribution_info): fix warning.

2002-02-08  Mark McLoughlin  <mark@skynet.ie>

	* launcher.c: (setup_button): free icon string.

	* menu-fentry.c: (fr_check_and_reread): unref the vfs file
	info before returning.
